Done Responsive Buy Instagram Likes & Free Trial Page

--- a/free-trial.html
+++ b/free-trial.html
@@ -104,7 +104,7 @@
     </div>
 </section>
 
-<section class="section trial">
+<section class="section trial pb-0">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
@@ -112,7 +112,11 @@
             </div>
             <div class="col-lg-7 mx-auto">
                 <div class="trial__block text-center mb-5">
-                    <img src="images/free-trial.png" alt="free-trial">
+                    <div class="trial__block-image">
+                        <img class="illustration right-top" src="images/free-trial/right-top.svg" alt="right-top">
+                        <img class="illustration center" src="images/free-trial/center.svg" alt="right-top">
+                        <img class="illustration left-bottom" src="images/free-trial/left-bottom.svg" alt="right-top">
+                    </div>
                     <h3 class="mb-3">Get 50 Instagram Likes for Free</h3>
                     <p>
                         Not sure if you want to purchase just yet? You can try our free trial for <a href="instagram-likes.html">REAL Instagram likes</a> or <a href="instagram-views.html">Instagram views</a> to
@@ -143,17 +147,17 @@
                             You have <strong>50 likes</strong> to spend, you can select at most 10 posts (5 likes/post) or spend all of your likes on a single post.
                         </p>
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-3 col-6">
                                 <div class="post-thumb mb-4">
                                     <img src="images/trial/post-1.jpg" class="w-100" alt="post-thumb">
                                 </div>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-3 col-6">
                                 <div class="post-thumb mb-4">
                                     <img src="images/trial/post-2.jpg" class="w-100" alt="post-thumb">
                                 </div>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-3 col-6">
                                 <div class="post-thumb mb-4">
                                     <img src="images/trial/post-3.jpg" class="w-100" alt="post-thumb">
                                     <div class="like-number">
@@ -161,7 +165,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-3 col-6">
                                 <div class="post-thumb mb-4">
                                     <img src="images/trial/post-4.jpg" class="w-100" alt="post-thumb">
                                     <div class="like-number">
@@ -169,22 +173,22 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-3 col-6">
                                 <div class="post-thumb mb-4">
                                     <img src="images/trial/post-3.jpg" class="w-100" alt="post-thumb">
                                 </div>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-3 col-6">
                                 <div class="post-thumb mb-4">
                                     <img src="images/trial/post-4.jpg" class="w-100" alt="post-thumb">
                                 </div>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-3 col-6">
                                 <div class="post-thumb mb-4">
                                     <img src="images/trial/post-1.jpg" class="w-100" alt="post-thumb">
                                 </div>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-3 col-6">
                                 <div class="post-thumb mb-4">
                                     <img src="images/trial/post-2.jpg" class="w-100" alt="post-thumb">
                                 </div>
