Done Responsive All pages

--- a/instagram-followers.html
+++ b/instagram-followers.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo">
+            <img src="images/logo.svg" alt="logo">
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
@@ -227,13 +227,13 @@
     </a>
 </section>
 
-<section class="section pb-0" id="feature">
+<section class="section pb-0" id="feature" style="background-image: url('images/backgrounds/pattern-bg.svg');">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-12 text-center">
                 <h2 class="section__title-center">Our Features</h2>
             </div>
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-4 col-md-6 text-center">
                 <div class="features__item">
                     <div class="features__image">
                         <img class="illustration top-left" src="images/instant-delivery-v/top-left.svg" alt="top-left">
@@ -244,7 +244,7 @@
                     <p class="mx-2">Followers will start rolling in right away as long as your payment was approved! Follower orders could take up to 10 - 45 minutes depending on quantity.</p>
                 </div>
             </div>
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-4 col-md-6 text-center">
                 <div class="features__item">
                     <div class="features__image">
                         <img class="illustration top-left" src="images/followers-refill/top-left.svg" alt="top-left">
@@ -255,7 +255,7 @@
                     <p class="mx-2">If a drop in your followers occur, you are automatically given a refill in followers gradually, in case you do not receive a refill, you may contact customer support at any given moment.</p>
                 </div>
             </div>
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-4 col-md-6 text-center">
                 <div class="features__item">
                     <div class="features__image">
                         <img class="illustration top-left" src="images/customer-support-f/top-left.svg" alt="top-left">
@@ -276,7 +276,7 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section__title-center">Packages & Prices</h2>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <h4> 100 <span> Followers </span></h4>
                     <h2><span> $ </span>2.99</h2>
@@ -286,10 +286,10 @@
                         <li>Quick Delivery</li>
                         <li>24/7 Support</li>
                     </ul>
-                    <a href="#" class="btn btn-primary">Buy</a>
+                    <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <h4> 500 <span> Followers </span></h4>
                     <h2><span> $ </span>5.99</h2>
@@ -299,10 +299,10 @@
                         <li>Quick Delivery</li>
                         <li>24/7 Support</li>
                     </ul>
-                    <a href="#" class="btn btn-primary">Buy</a>
+                    <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <div class="pricing__item-badge">
                         <span>Most Purchased</span>
@@ -315,10 +315,10 @@
                         <li>Quick Delivery</li>
                         <li>24/7 Support</li>
                     </ul>
-                    <a href="#" class="btn btn-primary">Buy</a>
+                    <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <div class="pricing__item-badge">
                         <span>Best Value</span>
@@ -331,10 +331,10 @@
                         <li>Quick Delivery</li>
                         <li>24/7 Support</li>
                     </ul>
-                    <a href="#" class="btn btn-primary">Buy</a>
+                    <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <div class="pricing__item-badge">
                         <span>Best Value</span>
@@ -347,7 +347,7 @@
                         <li>Quick Delivery</li>
                         <li>24/7 Support</li>
                     </ul>
-                    <a href="#" class="btn btn-primary">Buy</a>
+                    <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -405,21 +405,21 @@
                 <h2 class="text-white mb-4">How to Buy Instagram Followers</h2>
                 <p class="text-white mb-4">The process to buying Instagram likes from Instago is simple!</p>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="buy__steps">
                     <h3>Step One:</h3>
                     <p>Select Package</p>
                     <img class="img-fluid" src="images/buy-steps/buy-likes-how-step-1.svg" alt="Step-img">
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="buy__steps">
                     <h3>Step Two:</h3>
                     <p>Enter Username</p>
                     <img class="img-fluid" src="images/buy-steps/buy-likes-how-step-2.svg" alt="Step-img">
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="buy__steps">
                     <h3>Step Three:</h3>
                     <p>Checkout</p>
@@ -453,61 +453,61 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section__title-center">So.. Why Buy Instagram Followers?</h2>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 green">
                     <h3>What are the benefits of buying Instagram followers?</h3>
                     <p>Buying Instagram followers can jump start your page to help you reach new heights in terms of social media influence, helping your message or product get out there. So what do we mean by ‘jump start’ you may ask? Instagram’s algorithm favors pages with more followers, meaning more natural likes, and Instagram views which translates to your post being placed on the explore page through Instagram algorithm, thus translating to your page getting more targeted traffic, Instagram followers, and Instagram likes. So let’s face it, getting your page out there can be hard, but we here at Instago make it easier for you. So to summarize, the <a href="#">benefits to buying Instagram followers</a> are insane, from jump-starting your page, to being featured on the explore page.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 green">
                 <h3>Why choose Instago?</h3>
                 <p>We here at <a href="#">Instago</a> care about our customers, whether it be fast Instagram followers, high-quality likes, high-quality views, or excellent customer support, we pride ourselves on excellent customer service and general helpfulness. When you order followers from Instago you can expect to start seeing them within minutes, same goes for our 10,000 Instagram followers package! as for our competitors, they can take hours or even days. Using Instago, you are gaining Instagram followers whilst paying for top shelf quality, this is why we remain the most competitive on the market with thousands of satisfied customers. The minute your payment is received, your Instagram page runs through our high trafficked networks and is advertised until your purchased amount is received. By the off chance that you are not pleased with the service, our customer support is there to help and will work with you as far as fixing the issue at hand.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 green">
                     <h3>Expand people's awareness of your brand.</h3>
                     <p>You can very quickly and easily increase the number of people who are aware of your brand if you have got an Instagram profile for it. Nowadays, more people spend time on social media rather than watching TV. So if you want to reach a wide audience, and let them be aware of your business, having an Instagram is the best way to go about that. People, also respond better to Instagram posts rather than advertisements. So an effective marketing strategy for any business that wants to expand awareness of their brand is to use Instagram and other social media websites.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 green">
                 <h3>Are your Instagram followers delivered Instantly?</h3>
                 <p>As soon as your payment is received, our promotions team get to work on boosting your page, and your followers are generally sent out in a matter of 5-10 minutes, and they will all follow quickly and naturally, all you have to do is make sure your page is public and you’ve ordered the followers, and in minutes you're well on your way to social media stardom.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 green">
                     <h3>Will i get banned from Instagram?</h3>
                     <p>Absolutely not, this should not even be of concern because Instawhizz takes customer page security very seriously, so much so that we have created a groundbreaking system that makes sure your page will never get banned due to inactive Instagram followers, we do this by keeping our pages healthy by being up to par and updated with Instagram's guidelines. we have serviced thousands of Instagram pages over the years and not one page ban has been reported to us nor have we came across banned pages in our past customer diagnostic tests.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 green">
                 <h3>Do you need my password?</h3>
                 <p>No, think about it this way, when you follow someone on Instagram, would you need their password? Of course not, and Instawhizz works the same way, when your page is being advertised in our network, we place your page in duration to start receiving followers, when your page reaches the goal needed, your page is removed leaving you with a <a href="#">batch of brand new Instagram followers</a>. We do not condone the use of any app on the App Store or Play Store that offer the option to buy Instagram followers, they will ask for your password and Instagram will detect it as account theft and leave your account locked or terminated.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 green">
                     <h3>Will my Instagram followers drop?</h3>
                     <p>No, because of the aforementioned quality followers that obey the Instagram guidelines. At any rate, we also try our best to keep your followers to stay on your profile for as long as possible, after your purchase is made we monitor your account over a two week period to make sure you do not lose any of your followers, that is one of many strong suits Instawhizz holds.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 green">
                 <h3>What is the quality of the followers? </h3>
                 <p>The quality of our followers are outstanding. Quality is the most important trait of Instawhizz and we go the extra mile to make sure the followers that our customers order will be long-lasting, realistic, affordable, and dependable. Our competitors make claims that there service is the “best place to buy followers” but 99.9% of the time, those are empty claim. Instawhizz is an honest brand, so we don't claim that you gain active followers, or that we are the best, but what we do claim is that you can buy followers on Instagram for cheap, with a fast delivery time and robust convenience.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 green">
                     <h3>What Payment Options Do You Accept?</h3>
                     <p>We only accept PayPal as the prime payment method. For your safety and ours, PayPal is the safest way to make online transactions, we do not store any of PayPal information, nor any type of credit card information, PayPal is also instantaneous with transfers meaning the moment you make your payment successfully, your order starts right away, and is delivered within 10 - 30 minutes. Please note, if you pay using eCheck or bank transfer, it could take 3 - 5 business days for your payment to clear.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 green">
                 <h3>So, What Are You Waiting For?</h3>
                 <p>You're a few clicks away from growing your followers on Instagram and taking one big jump towards becoming the next big Instagram influencer, with a robust instant delivery service, and strong confidence as the most competitive cheapest pricing on the market, backed by incredible customer service, What more could you ask for? Whether you are looking for 100 followers, or 10,000 in a quick fast turnaround time, rest assured Instawhizz has you covered.</p>
