--- a/instagram-views.html
+++ b/instagram-views.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo">
+            <img src="images/logo.svg" alt="logo">
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
@@ -97,7 +97,7 @@
                     <p>
                         Start gaining instant views when you buy Instagram video views from Instawhizz. 100 Instagram views will cost you as cheap as $1.99! We remain incomparable and the best on the net between our competitors!
                     </p>
-                    <a href="#service" class="btn btn-white page-scroll">
+                    <a href="#pricing" class="btn btn-white page-scroll">
                         Try 100 Views for $1.99
                     </a>
                 </div>
@@ -229,13 +229,13 @@
     </a>
 </section>
 
-<section class="section pb-0" id="feature">
+<section class="section pb-0" id="feature" style="background-image: url('images/backgrounds/pattern-bg.svg');">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-12 text-center">
                 <h2 class="section__title-center">Our Features</h2>
             </div>
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-4 col-md-6 text-center">
                 <div class="features__item">
                     <div class="features__image">
                         <img class="illustration top-left" src="images/high-quality/top-left.svg" alt="top-left">
@@ -246,7 +246,7 @@
                     <p class="mx-2">We provide a superior quality in Instagram views and could provide up to a 1,000,000 of views for a single video. Our views will help your video rank high for the hashtags included in your post.</p>
                 </div>
             </div>
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-4 col-md-6 text-center">
                 <div class="features__item">
                     <div class="features__image">
                         <img class="illustration top-left" src="images/instant-views/top-left.svg" alt="top-left">
@@ -257,7 +257,7 @@
                     <p class="mx-2">Views roll in quicker than lightning once your payment is verified, no matter the quantity.</p>
                 </div>
             </div>
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-4 col-md-6 text-center">
                 <div class="features__item">
                     <div class="features__image">
                         <img class="illustration top-left" src="images/customer-support/top-left.svg" alt="top-left">
@@ -272,13 +272,13 @@
     </div>
 </section>
 
-<section class="section pricing">
+<section class="section pricing" id="pricing">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-12 text-center">
                 <h2 class="section__title-center">Packages & Prices</h2>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <h4> 100 <span> Views </span></h4>
                     <h2><span> $ </span>1.99</h2>
@@ -291,7 +291,7 @@
                     <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <h4> 500 <span> Views </span></h4>
                     <h2><span> $ </span>4.99</h2>
@@ -304,7 +304,7 @@
                     <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <h4> 2,500 <span> Views </span></h4>
                     <h2><span> $ </span>16.99</h2>
@@ -317,7 +317,7 @@
                     <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <h4> 5,000 <span> Views </span></h4>
                     <h2><span> $ </span>29.99</h2>
@@ -330,7 +330,7 @@
                     <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <h4> 10,000 <span> Views </span></h4>
                     <h2><span> $ </span>42.99</h2>
@@ -343,7 +343,7 @@
                     <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <h4> 25,000 <span> Views </span></h4>
                     <h2><span> $ </span>84.99</h2>
@@ -356,7 +356,7 @@
                     <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <div class="pricing__item-badge">
                         <span>Most Popular</span>
@@ -372,7 +372,7 @@
                     <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <h4> 85,000 <span> Views </span></h4>
                     <h2><span> $ </span>215.99</h2>
@@ -385,7 +385,7 @@
                     <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <h4> 1,00,000 <span> Views </span></h4>
                     <h2><span> $ </span>249.99</h2>
@@ -398,7 +398,7 @@
                     <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="pricing__item">
                     <div class="pricing__item-badge">
                         <span>Best Value</span>
@@ -469,21 +469,21 @@
                 <h2 class="text-white mb-4">How to Buy Instagram Views</h2>
                 <p class="text-white mb-4">The process to buying Instagram views from Instawhizz is simple!</p>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="buy__steps">
                     <h3>Step One:</h3>
                     <p>Select Package</p>
                     <img class="img-fluid" src="images/buy-steps/buy-likes-how-step-1.svg" alt="Step-img">
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="buy__steps">
                     <h3>Step Two:</h3>
                     <p>Select Videos</p>
                     <img class="img-fluid" src="images/buy-steps/buy-likes-how-step-2.svg" alt="Step-img">
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6">
                 <div class="buy__steps">
                     <h3>Step Three:</h3>
                     <p>Checkout</p>
@@ -517,49 +517,49 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section__title-center">So.. Why Buy Instagram Video Views?</h2>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 red">
                     <h3>It will create a favorable image of your brand.</h3>
                     <p>If your brand's Instagram and other social media accounts are managed properly, you will also be able to create a favorable image of your business. And the impression that people will have to your business is quite important. The better of an impression that Instagram users will have to your business than the higher the chances that you will also be able to obtain a large and loyal customer base. So if you want to attract more customers or clients to your brand, be sure to create a very wholesome image on Instagram.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 red">
                 <h3>What are the benefits of Instagram Views?</h3>
                 <p>We conducted many tests, one being when we uploaded a sample video with hashtag "like" one time without views, and once with views, we found the hashtag rose to the top charts for the hashtag right away when views were implemented to the video. So exposure is a definite benefit when you purchase Instagram views.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 red">
                     <h3>Why Choose Instago?</h3>
                     <p>We did not just start social media promotions, if you have been around on social media for a while, you would know we used to promote YouTube videos till they would hit the most popular page of the day, when Instagram came out, we started doing many tests right away and moved on to something more relevant, this is when <a href="#">Instago</a> was born. Besides the fact that we have been in business for a while, we offer cheap Instagram views with instant delivery while still keeping quality at an ultimate high.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 red">
                 <h3>Will It Hurt My Account?</h3>
                 <p>Not a single account has been terminated, or locked due to our services as it is natural growth. We have promoted thousands of Instagram videos since it had been released as a new feature on Instagram.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 red">
                     <h3>Do You Need My Password?</h3>
                     <p>We do not require and will never require your password in order to receive our services.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 red">
                 <h3>Is it really instant delivery?</h3>
                 <p>Yes, our views, along with our other services (photo likes and followers) are sent out and delivered in two - three minutes upon purchase. You must be thinking, how does that work? Well, when you make your purchase through PayPal's payment gateway, your order is sent to our high trafficked exchange networks, with the incentive to view, like or follow your account in return to get the promotion themselves!</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 red">
                     <h3>Do you offer an automatic monthly subscription?</h3>
                     <p>Yes, we have our <a href="#">premium monthly subscription service</a>. With this wonderful monthly subscription, you are able to rest easy and never have to manually order likes, nor views again as your account is monitored 24/7 to send out promotions for when that new upload comes in. Our high-quality automatic promotional services are the cheapest amongst all services, and the best in the market.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="feature__item mx-1 red">
                 <h3>What Payment Options Do You Accept?</h3>
                 <p>As of now we just accept PayPal payments, in case you are looking to buy Instagram views using a credit card - you might do so by connecting your card information on your PayPal account, it should not take more than 5 minutes! We highly recommend every purchase to come from a PayPal account as it's the safest, and most convenient for both the seller & buyer.</p>
