--- a/faq.html
+++ b/faq.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo">
+            <img src="images/logo.svg" alt="logo">
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
