--- a/free-trial.html
+++ b/free-trial.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo">
+            <img src="images/logo.svg" alt="logo">
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
@@ -104,7 +104,7 @@
     </div>
 </section>
 
-<section class="section trial pb-0">
+<section class="section trial" style="background-image: url('images/backgrounds/pattern-bg.svg');">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
