--- a/instagram-downloader.html
+++ b/instagram-downloader.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo">
+            <img src="images/logo.svg" alt="logo">
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
@@ -121,7 +121,7 @@
     </div>
 </section>
 
-<section class="section bg-primary-gradient">
+<section class="section downloader bg-arced">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-12 text-center">
@@ -132,21 +132,21 @@
                 <div class="card border-0 text-center main-shadow p-3">
                     <h3>01</h3>
                     <p>Copy Instagram Post URL</p>
-                    <img class="img-fluid w-100" src="images/download-steps/instasave-step-1.svg" alt="step-1">
+                    <img class="img-fluid w-100" src="images/download-steps/instasave-step-1.png" alt="step-1">
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
                 <div class="card border-0 text-center main-shadow p-3">
                     <h3>02</h3>
                     <p>Paste URL in the field above</p>
-                    <img class="img-fluid w-100" src="images/download-steps/instasave-step-2.svg" alt="step-2">
+                    <img class="img-fluid w-100" src="images/download-steps/instasave-step-2.png" alt="step-2">
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
                 <div class="card border-0 text-center main-shadow p-3">
                     <h3>03</h3>
                     <p>Press Download</p>
-                    <img class="img-fluid w-100" src="images/download-steps/instasave-step-3.svg" alt="step-2">
+                    <img class="img-fluid w-100" src="images/download-steps/instasave-step-3.png" alt="step-2">
                 </div>
             </div>
         </div>
