--- a/instagram-likes.html
+++ b/instagram-likes.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo">
+            <img src="images/logo.svg" alt="logo">
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
@@ -211,7 +211,7 @@
     </a>
 </section>
 
-<section class="section pb-0" id="feature">
+<section class="section pb-0" id="feature" style="background-image: url('images/backgrounds/pattern-bg.svg');">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-12 text-center">
